--- a/src/app/components/modal/modal.page.scss
+++ b/src/app/components/modal/modal.page.scss
@@ -26,6 +26,10 @@
   padding: 40px 20px 20px;
   box-shadow: 2px 10px 55px 0px rgba(0, 0, 0, 0.75);
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 
   &__close {
     padding: 0;
